2002-06-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make: 
	* make/lilypond-vars.make:
	* GNUmakefile.in (builddir-setup): New setup for builddir run.
	Fixes LilyPond run from builddir for --srcdir builds.

	* Documentation/windows/GNUmakefile (OUT_PROFILES): Bugfix for
	--srcdir build.

2002-06-12  Han-Wen  <hanwen@cs.uu.nl>

	* scm/grob-description.scm (all-grob-descriptions): add
	font-family to RehearsalMark

	* scm/drums.scm: move over definitions from drum-pitch-init.ly

	* lily/volta-bracket.cc (brew_molecule): bugfix, don't do anything
	if glyph not set.

2002-06-12  Heikki Junes  <heikki.junes@hut.fi>

	* lilypond-mode.el: Propose saving before applying a command:
	for saved buffer set default command to LilyPond.

2002-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/mutopia-index.py (headertext_nopics): Add missing
	variable.

	* Documentation/windows/lilypond.hint: Renamed (previously setup.hint).

	* Documentation/windows/lilypond-doc.hint: New file.

	* GNUmakefile.in: Forward port: Add toplevel target install-html-doc.
	Bugfixes for --srcdir html-doc build.
	
	* make/lilypond-vars.make (LILYPOND_BOOK_INCLUDES): Forward port:
	Bugfix: Include $(builddir)/mf/out (was $(srcdir)/mf/out.

2002-06-10  Han-Wen  <hanwen@cs.uu.nl>

	* ly/script-init.ly (pralldown): add some scripts.

	* Documentation/user/refman.itely: many edits.

2002-06-09  Han-Wen  <hanwen@cs.uu.nl>

	* lily/tuplet-bracket.cc (brew_molecule): don't translate in Y
	direction, this breaks staffline avoidance of the bracket when
	they're horizontal.

2002-06-08  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/midi2ly.py: Fix handling of -o

2002-06-08  Han-Wen  <hanwen@cs.uu.nl>

	* lily/molecule.cc (translate): set max distance to 100 cm.

2002-06-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.5.60 released

	* lily/beam.cc: tremolo fix.

	* scripts/convert-ly.py:  add tuplet-X-visibility rules.